# hypergraph-k-cut

./: CMakeLists.txt  CMakeLists.txt.in  Dockerfile  LICENSE  Makefile  README.md  approx.h  bucket_list.cpp  bucket_list.h  certificate.cpp  certificate.h  cxy.h  fpz.h  gen.cpp  hypergraph.cpp  hypergraph.h  install-deps.sh  main.cpp  order.cpp  order.h  search.cpp  sparsify.cpp  test.cpp
.circleci/: config.yml
.github/workflows/: ubuntu.yml
app/: CMakeLists.txt
app/hcut/: CMakeLists.txt  README.md  builder.hpp  main.cpp  switch.hpp
app/hexperiment/: CMakeLists.txt  README  README.md  common.hpp  evaluator.cpp  evaluator.hpp  experiment.cpp  experiment.hpp  generate.cpp  generators.cpp  main.cpp  runner.cpp  runner.hpp  source.cpp  source.hpp  sqlutil.cpp  sqlutil.hpp  store.cpp  store.hpp
app/hexperiment/config/: planted-k2-cutoff.yaml  planted-k2.yaml  planted-k3.yaml  planted_constant_rank-k2-cutoff.yaml  planted_constant_rank-k2.yaml  planted_constant_rank-k3.yaml  ring-cutoff.yaml  ring.yaml  rings.yaml
app/hexperiment/configs/: planted.yaml  planted_constant_rank.yaml  ring.yaml
app/hgen/: CMakeLists.txt  README.md  gen.cpp  main.cpp
app/hgenexperiment/: CMakeLists.txt  README.md  main.cpp
app/hkcore/: CMakeLists.txt  kcore.cpp
app/hsparsify/: CMakeLists.txt  sparsify.cpp
cmake/: extern.cmake
experiment/: CMakeLists.txt  common.hpp  evaluator.cpp  evaluator.hpp  gather.cpp  generators.cpp  generators.hpp  main.cpp  source.cpp  source.hpp  store.cpp  store.hpp
experiment/sqlite/: CMakeLists.txt  sqlite3.h
ext/: CMakeLists.txt
hypergraph/: CMakeLists.txt
hypergraph/include/hypergraph/: approx.h  approx.hpp  base.hpp  bucket_list.hpp  certificate.h  certificate.hpp  cut.hpp  cxy.h  cxy.hpp  fpz.h  fpz.hpp  heap.hpp  hypergraph.h  hypergraph.hpp  kk.hpp  order.h  order.hpp  registry.hpp  util.hpp
hypergraph/src/: bucket_list.cpp  certificate.cpp  heap.cpp  hypergraph.cpp  order.cpp
hypergraph/test/: CMakeLists.txt  suite.hpp  test.cpp  test_cut.cpp  testutil.hpp
hypergraph/test/instances/: simple.htest
hypergraph/test/instances/misc/small/unweighted/: a.htest
hypergraph/test/instances/misc/small/weighted/: w_a.htest
hypergraph/test/instances/misc/smallrank/unweighted/: smallranka.htest  smallrankb.htest  smallrankc.htest
hypergraph/test/instances/misc/smallrank/weighted/: smallranka.htest  smallrankb.htest
lib/: CMakeLists.txt
lib/generators/: CMakeLists.txt
lib/generators/include/generators/: generators.hpp
lib/generators/src/: generators.cpp
lib/hypergraph/: CMakeLists.txt  README
lib/hypergraph/include/hypergraph/: approx.hpp  base.hpp  certificate.hpp  cut.hpp  cxy.hpp  fpz.hpp  heap.hpp  hypergraph.hpp  kk.hpp  order.hpp  util.hpp
lib/hypergraph/src/: certificate.cpp  heap.cpp  hypergraph.cpp
lib/hypergraph/test/: metatest.cpp  test.cpp  test_cut.cpp  testutil.hpp
lib/hypergraph/test/instances/: weighted_simple.htest
lib/hypergraph/test/instances/misc/small/unweighted/: b.htest
lib/hypergraph/test/instances/misc/smallrank/weighted/: smallrankc.htest
scripts/: CMakeLists.txt  README.md  eps.cpp  gathercuts.py  kcore.py  merge.py  run-all-experiments.sh  sqlplot-cutoff.py  sqlplot.py
